appId: ${APP_ID}
---
- launchApp
- tapOn:
    id: "bitcoin"
- extendedWaitUntil:
    visible:
      id: "price"
      containsDescendants:
        - text: "\\$[0-9,]+\\.[0-9]+"
    timeout: 30000
- takeScreenshot: ${output.journey}_asset
- tapOn:
    id: "price"
- tapOn:
    id: "period_week"
- assertVisible:
    id: "period_day"
- takeScreenshot: ${output.journey}_chart
